error_templates/java/test_files/no_class_def_error/test.txt
template: "Java.NoClassDefError"
---
MyClass.java:5: error: cannot find symbol
        NonExistingClass obj = new NonExistingClass();
        ^
  symbol:   class NonExistingClass
  location: class MyClass
MyClass.java:5: error: cannot find symbol
        NonExistingClass obj = new NonExistingClass();
                                   ^
  symbol:   class NonExistingClass
  location: class MyClass
2 errors
===